bugfix: increase z-index on dropdown meny

--- a/django/static/css/menu.less
+++ b/django/static/css/menu.less
@@ -44,7 +44,7 @@
     padding: 10px 12px;
     text-decoration: none;
     color: @fg;
-    background-color: @bg
+    background-color: @bg;
 }
 
 #nav a:hover {
@@ -64,4 +64,5 @@
 //#nav li:hover > ul {
 #nav li:hover ul {
     display: block;
+    z-index: 999;   // always on top
 }
